--- a/conf/config.toml
+++ b/conf/config.toml
@@ -2,5 +2,6 @@ version = "0.0.1"
 
 
 [stock]
+xueqiuDest = "https://stock.xueqiu.com/v5/stock/realtime/pankou.json"
 eastmoneyDest = "http://push2.eastmoney.com/api/qt/stock"
-stockList = [600183] #生益科技
+stockList = ["SH600183"] #生益科技
