--- a/conf/config.toml
+++ b/conf/config.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 [stock]
 xueqiuDest = "https://stock.xueqiu.com/v5/stock/realtime/pankou.json"
 eastmoneyDest = "http://push2.eastmoney.com/api/qt/stock"
-stockList = [["SH600183", "生益科技", 21.50], ["SH600570", "恒生电子", 87.00]] #生益科技 恒生电子
+stockList = [["SH600183", "生益科技", "21.50"], ["SH600570", "恒生电子", "87.00"]] #生益科技 恒生电子
 
 
 [smtp_mail]
