--- a/conf/config.toml
+++ b/conf/config.toml
@@ -6,12 +6,12 @@ xueqiuDest = "https://stock.xueqiu.com/v5/stock/realtime/pankou.json"
 eastmoneyDest = "http://push2.eastmoney.com/api/qt/stock"
 stockList = [["SH600183", "生益科技", "21.50"], ["SH600570", "恒生电子", "87.00"]] #生益科技 恒生电子
 
-
+#修改下面为自己的smtp邮箱
 [smtp_mail]
 host = "smtp.qq.com"
 port = 465
-account = "123123@qq.com"
-password = "123456"
-receivers = ["123123@qq.com", "456456@qq.com"]
+account = "xxx@qq.com"
+password = "password"
+receivers = ["123123@qq.com"] #收件人
 
 
